
* LUCENE-9674: Implement faster advance on VectorValues using binary search.
  (Anand Kotriwal, Mike Sokolov)

* LUCENE-9794: Speed up implementations of DataInput.skipBytes(). (Greg Miller)

* LUCENE-9827: Speed up merging of stored fields and term vectors for smaller segments.
  (Daniel Mitterdorfer, Dimitrios Liapis, Adrien Grand, Robert Muir)

Bug fixes


* LUCENE-9686: Fix read past EOF handling in DirectIODirectory. (Zach Chen, 
  Julie Tibshirani)

* LUCENE-8663: NRTCachingDirectory.slowFileExists may open a file while 
  it's inaccessible. (Dawid Weiss)

* LUCENE-9117: RamUsageEstimator hangs with AOT compilation. Removed any attempt to
  estimate Long.valueOf cache size. (Cleber Muramoto, Dawid Weiss)

* LUCENE-9290: Don't assume that different XYPoint have different hash code
  (Ignacio Vera via Mike Drob)

* LUCENE-9372: Fix paths for cygwin/msys before gradle wrapper jar lookup.
  (Peter Barna)

* LUCENE-9365: FuzzyQuery was missing matches when prefix length was equal to the term length
  (Mark Harwood, Mike Drob)

* LUCENE-9580: Fix bug in the polygon tessellator when introducing collinear edges during polygon 
  splitting. (Ignacio Vera)

Changes in Backwards Compatibility Policy

* LUCENE-9669: DirectoryReader#open now accepts an argument to open indices created with versions
  older than N-1. Lucene now can open indices created with a major version of N-2 in read-only mode.
  Opening an index created with a major version of N-2 with an IndexWriter is not supported.
  Further does lucene only support file-format compatibilty which enables reading of old indices while
  semantic changes like analysis or certain encoding on top of the file format are only supported on 
  a best effort basis. (Simon Willnauer)  

Other

* LUCENE-9570, LUCENE-9564: Apply google java format and enforce it on source Java files.
  Review diffs and correct automatic formatting oddities. (Erick Erickson,
  Bruno Roustant, Dawid Weiss)
